- fixed issue with logo being too small - added signup link back to index

--- a/war/home/css/styles.css
+++ b/war/home/css/styles.css
@@ -1135,7 +1135,7 @@ section {
     
     /* Header */
     
-    #logo img{width:150px;}
+    /* #logo img{width:150px;} */
     
     #intro{margin-top: 6.25em;}  
     /* #intro h1{margin-top: 1.25em;font-size: 2em;}
